# HurricaneAI

./: .deploy-trigger  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci-deploy.yml
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  Procfile  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  chains.py  prompts.py  tools.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  campaigns.py  enrichment.py  leads.py  router.py
backend/app/models/: __init__.py  campaign.py  lead.py  user.py
backend/app/schemas/: campaign.py  common.py  lead.py
backend/app/services/: campaign_service.py  enrichment_service.py  lead_service.py
backend/app/workers/: tasks.py
backend/prisma/: schema.prisma
backend/tests/: conftest.py  test_campaigns.py  test_leads.py
frontend/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/leads/: LeadCard.tsx  LeadTable.tsx  TriageLeadCard.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/lib/: api-client.ts  supabase-server.ts  supabase.ts  types.ts
(+6 files in other folders)
